0.17.5
======
Bugfix release

- Fixed bug in inheritance code which adds a optional prefix to '$' variables
  in rules.

0.17.4
======
 * Render global error and warning messages in forms without pages too. Fixed
   bug that these messages were only shown for forms with an outline.
 * Added --tags option to generate.py to filter fields with specific tags.
 * Added command 'fieldnames' to only render fieldnames instead of the model.
   Additionally there is a aslist flag to render the names as a python list

0.17.3
======

 * Fixed annoying bug of jumping curson in textfields. If the user changes
   something in the middle of a textfield the cursor jump immediately to the
   end of the textfield again. This makes it quite impossible to work with
   textfields.

 * Fixed handling of static rules. In case the the form validation failes the
   `form.data` attribute is empty. This resulted in failing rule evaluations of
   static rules because there was not dictionary of valuea available. Now use the
   loaded_data in case the form.data is empty.

0.17.2
======
- Prevent forms from double submission on default.
  Added "disable-double-submit-prevention" css class which can be used
  in the form definition to explicit disable the submit prevention.
- Refacored code when initialising the form. Fixed/Improved comments on the
  involved methods.
- Fixed bug the getting only evaluable fields on validation reinitialized the
  form which leads to later problems on rule evaluation because of missing
  fields.
- Make logging warnings when trying to access attributes of the linked item
  more tolerant on errors. So only log those errors if the item is not fresh
  created as in this case chances are high that relations or other values are
  missing. Logging in this case would lead to too much false positives.
- Prevent forms from beeing double submitted. This is done on client side
  using JS.
- Cleanup of code to reset and remove values in the form in case a conditional