@@ -1,3 +1,10 @@
+Next
+====
+
+Performance: Do not build rules on loading a form configuration. Only build
+rules if they are actually needed (On rules evaluation). This improves the
+performance by almost factor or 2.
+
 0.17.5
 ======
 Bugfix release
